--- a/semana-04/css/footer.css
+++ b/semana-04/css/footer.css
@@ -1,17 +1,4 @@
-/*footer li{
-    display: inline-flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    margin-top: 5px;
 
-
-}
-footer .link{
-margin-left: 4%;
-}*/
 footer{
    position: fixed;
    bottom: 0;
@@ -25,6 +12,7 @@ footer{
    background-color: #373867;
    color: #AACE9B;
    text-align: center;
+   margin-top: 10%;
 }
 footer ul, footer address{
     margin-bottom: 2px;
@@ -34,4 +22,7 @@ footer ul{
 }
 footer ul li{
     margin: 0 7px;
+}
+footer address a p{
+    color: #AACE9B;
 }
