--- a/semana-04/css/header.css
+++ b/semana-04/css/header.css
@@ -1,23 +1,3 @@
-/*header .buttom{
-    display: flex;
-    align-self:flex-end;
-    color: brown;
-    background-color: black;
-    justify-content: flex-end;
-    margin-right: 15px;
-    margin-bottom: 15px;
-    
-    
-    
-
-}
-header .img{
-    display: flex;
-    align-self: center;
-    justify-content: center;
-    margin-top: 0.5%;
-    margin-bottom: 0.5%;
-}*/
 header{
     position: fixed;
     top: 0;
@@ -29,12 +9,13 @@ header{
     width: 100%;
     height: 90px;
 }
-.nav-bar{
+.burguer-button{
     width: 25px;
     height: 25px;
     margin-left: 62px;
     border: none;
     background-color: #373867;
+    background-image: url(/img/burger-button.jpg);
 }
 .header-logo{
     width: 45px;
@@ -50,11 +31,11 @@ header{
     font-weight: bold;
 }
 @media screen and (min-width: 768px){
-    .nav-bar{
+    .burguer-button{
         display: none;
     }
     .header-logo{
-        margin-left: 46.5%;
+       margin-left: 43%;
     }
     
 }
