--- a/semana-04/css/main.css
+++ b/semana-04/css/main.css
@@ -1,63 +1,3 @@
-/*.flex-container-2{
-    width: 100%;
-    right: auto;
-    background-image: url(/img/fondo-pg-1.png);
-    flex-wrap: wrap;
-    flex-direction: column;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    margin-top: 10%;
-
-}
-main .flex-item h1{
-    display: flex;
-    text-decoration: underline;
-    justify-content: center;
-    align-content: center;
-    font-size: 80%;
-    font-family: Arial, Helvetica, sans-serif;
-
-
-
-}
-main .flex-item img{
-    display: flex;
-    width: 60%;
-    right: auto;
-    justify-content: center;
-    align-content: center;
-    margin-left: 23%;
-}
-.flex-container-3{
-    width: 30%;
-    right: auto;
-    flex-wrap: wrap;
-    font-family: Arial, Helvetica, sans-serif;
-    flex-direction: row;
-}
-.flex-item-3 h2{
-   font-size: xx-large;
-   font-family: Arial, Helvetica, sans-serif;
-   font-style: initial;
-   justify-content: space-between;
-
-}
-.flex-item-3 h3{
-    margin-top: 15px;
-    margin-bottom: 20px;
-}
-*/
-
-
-
-
-
-
-
-
-
-
 section{
     display: flex;
         flex-direction: column;
@@ -68,11 +8,10 @@ section{
     section:first-child, section:last-child{
         border: none;
     }
-    
     #home{
         flex-direction: column;
         padding: 62px 0 154px 0;
-        background-image: url(/img/fondo-pg-1.png);
+        background-image: url(/img/homepage.png);
         background-position: left  top;
         background-size: cover;
     }
@@ -258,6 +197,7 @@ section{
         width: 100%;
         padding: 20px 0;
         border-top: 60px solid #49A37B; 
+        margin-bottom: 15%;
     }
     .pbs div{
         display: flex;
@@ -284,7 +224,7 @@ section{
         }
         main{
             margin-top: 90px;
-            padding-bottom: 104px;
+            padding-bottom: 120px;
         }
     @media screen and (min-width: 480px) {
         #home h1{
@@ -379,7 +319,8 @@ section{
             justify-content: space-around;
             width: 95%;
             margin-top: 100px;
-            border-top: 1px solid rgba(0, 0, 0, 0.5)
+            border-top: 1px solid rgba(0, 0, 0, 0.5);
+            margin-bottom: 15px;
         }
         .pbs div{
             width: auto;
@@ -395,4 +336,6 @@ section{
         .pbs ol{
             padding-left: 18px;
             font-size: 100%;
+        }
+        }
         }
